# Comp-595-Project

./: CMakeLists.txt  ac.cpp  findMods.cpp  polyExpand.cpp  problem.yaml  readme.md  tle_crt.cpp
data/: 01.in  03.in  04.in  05.in  08.out
data/sample/: 01.ans  02.in
data/secret/: 03.ans  05.ans  06.ans  06.in  07.ans  07.in  08.ans  08.in
input_format_validators/: validate.ctd
problem_statement/: problem.tex
report/: data_explainers.md
solns/: ac.cpp  tle_simplelift.cpp  tle_simplest.cpp  wa_distinctprimes.cpp
submissions/accepted/: ac.py
